--- a/index.html
+++ b/index.html
@@ -4,283 +4,199 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Slimste Kameraad</title>
-    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-    <script defer>
-        document.addEventListener("DOMContentLoaded", () => {
-            const firebaseConfig = {
-                apiKey: "YOUR_API_KEY",
-                authDomain: "YOUR_AUTH_DOMAIN",
-                databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com/",
-                projectId: "YOUR_PROJECT_ID",
-                storageBucket: "YOUR_STORAGE_BUCKET",
-                messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-                appId: "YOUR_APP_ID"
-            };
 
-            // Initialiseer Firebase
-            firebase.initializeApp(firebaseConfig);
-            const database = firebase.database();
-            const timersRef = database.ref("timers");
-            const teamNamesRef = database.ref("teamNames");
+    <!-- Firebase SDK (modular) -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+        import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
 
-            let timers = [60, 60, 60, 60];  // Tijd voor elke timer
-            let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];  // Standaard teamnamen
-            let intervals = [null, null, null, null];  // Array voor timers
-            let geselecteerdeTimer = 0;
-            let zichtbareTimers = [true, true, true, true];
+        // Firebase configuratie
+        const firebaseConfig = {
+            apiKey: "AIzaSyDZT3EHgtrDfDxevE4xy2a-xIS3X7Cegho",
+            authDomain: "de-slimste-kameraad-timer-ppt.firebaseapp.com",
+            databaseURL: "https://de-slimste-kameraad-timer-ppt-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "de-slimste-kameraad-timer-ppt",
+            storageBucket: "de-slimste-kameraad-timer-ppt.firebasestorage.app",
+            messagingSenderId: "63484640762",
+            appId: "1:63484640762:web:6541546d615df83c5b7843"
+        };
 
-            // Update de timerweergave
-            function updateWeergave() {
-                timers.forEach((tijd, index) => {
-                    document.getElementById(`timer${index}`).textContent = tijd;
-                    let teamNaamEl = document.getElementById(`team-name-${index}`);
-                    teamNaamEl.textContent = teamNamen[index];  // Gebruik de gedefinieerde teamnaam
+        // Initialiseer Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getDatabase(app);
+        const timersRef = ref(db, 'timers');
+        const teamNamesRef = ref(db, 'teamNames');
+        const selectedTimerRef = ref(db, 'selectedTimer');
 
-                    document.getElementById(`timer-container-${index}`).style.display = zichtbareTimers[index] ? "block" : "none";
-                });
-            }
+        let timers = [60, 60, 60, 60];
+        let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
+        let intervals = [null, null, null, null];
+        let geselecteerdeTimer = 0;
+        let zichtbareTimers = [true, true, true, true];
 
-            // Synchroniseer timer naar Firebase
-            function syncTimer() {
-                timersRef.set(timers); // Zet de timerstatus in Firebase
-            }
-
-            // Synchroniseer teamnamen naar Firebase
-            function syncTeamNames() {
-                teamNamesRef.set(teamNamen);  // Zet de teamnamen in Firebase
-            }
-
-            // Start de timer en synchroniseer met Firebase
-            function startTimer() {
-                if (intervals[geselecteerdeTimer]) return;
-                intervals[geselecteerdeTimer] = setInterval(() => {
-                    if (timers[geselecteerdeTimer] > 0) {
-                        timers[geselecteerdeTimer]--;
-                        updateWeergave();
-                        syncTimer(); // Synchroniseer elke seconde
-                    } else {
-                        stopTimer(); // Stop de timer als deze op 0 komt
-                    }
-                }, 1000);
-
-                timerStatusRef.set({
-                    running: true,
-                    selectedTimer: geselecteerdeTimer
-                });
-            }
-
-            // Stop de timer en synchroniseer met Firebase
-            function stopTimer() {
-                clearInterval(intervals[geselecteerdeTimer]);
-                intervals[geselecteerdeTimer] = null;
-                timerStatusRef.set({
-                    running: false,
-                    selectedTimer: geselecteerdeTimer
-                });
-            }
-
-            // Reset de timer en synchroniseer met Firebase
-            function resetTimer() {
-                timers = [60, 60, 60, 60];
-                updateWeergave();
-                syncTimer();
-            }
-
-            // Pas de tijd aan en synchroniseer met Firebase
-            function pasTijdAan(aantal) {
-                timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
-                updateWeergave();
-                syncTimer();
-            }
-
-            // Maak teamnaam bewerkbaar
-            function maakTeamnaamBewerkbaar(index) {
+        // Update de timerweergave
+        function updateWeergave() {
+            timers.forEach((tijd, index) => {
+                document.getElementById(`timer${index}`).textContent = tijd;
                 let teamNaamEl = document.getElementById(`team-name-${index}`);
-                let inputVeld = document.createElement("input");
-                inputVeld.type = "text";
-                inputVeld.value = teamNamen[index];
-                inputVeld.classList.add("team-input");
+                teamNaamEl.textContent = teamNamen[index];
 
-                // Vervang de huidige naam door het invoerveld
-                teamNaamEl.replaceWith(inputVeld);
-                inputVeld.focus();
-
-                inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
-                inputVeld.addEventListener("keydown", (event) => {
-                    if (event.key === "Enter") {
-                        slaNieuweTeamnaamOp(index, inputVeld.value);
-                    }
-                });
-            }
-
-            // Sla de nieuwe teamnaam op in Firebase
-            function slaNieuweTeamnaamOp(index, nieuweNaam) {
-                if (nieuweNaam.trim() !== "") {
-                    teamNamen[index] = nieuweNaam;
-                }
-                updateWeergave();
-                syncTeamNames();
-            }
-
-            // Synchroniseer met Firebase en luister naar status updates
-            function syncWithFirebase() {
-                timersRef.on("value", (snapshot) => {
-                    const data = snapshot.val();
-                    if (data) {
-                        timers = data;
-                        updateWeergave();
-                    }
-                });
-
-                teamNamesRef.on("value", (snapshot) => {
-                    const data = snapshot.val();
-                    if (data) {
-                        teamNamen = data;
-                        updateWeergave();
-                    }
-                });
-            }
-
-            // Event listeners voor de knoppen
-            document.querySelectorAll(".timer").forEach((el, index) => {
-                el.addEventListener("click", () => selecteerTimer(index));
+                document.getElementById(`timer-container-${index}`).style.display = zichtbareTimers[index] ? "block" : "none";
             });
+        }
 
-            document.getElementById("startBtn").addEventListener("click", startTimer);
-            document.getElementById("stopBtn").addEventListener("click", stopTimer);
-            document.getElementById("resetBtn").addEventListener("click", resetTimer);
-            document.getElementById("toggleBtn").addEventListener("click", toggleTimerZichtbaarheid);
+        // Synchroniseer de timer naar Firebase
+        function syncTimer() {
+            set(timersRef, timers);  // Zet de timerstatus in Firebase
+        }
 
-            document.querySelectorAll(".adjust-time").forEach(button => {
-                button.addEventListener("click", () => pasTijdAan(parseInt(button.dataset.amount)));
-            });
+        // Synchroniseer teamnamen naar Firebase
+        function syncTeamNames() {
+            set(teamNamesRef, teamNamen);  // Zet de teamnamen in Firebase
+        }
 
-            syncWithFirebase(); // Start de synchronisatie
+        // Synchroniseer de geselecteerde timer naar Firebase
+        function syncSelectedTimer() {
+            set(selectedTimerRef, geselecteerdeTimer);  // Zet de geselecteerde timer in Firebase
+        }
 
-            // Selecteer een timer
-            function selecteerTimer(index) {
-                document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
-                geselecteerdeTimer = index;
-                document.getElementById(`timer-container-${index}`).classList.add("selected");
-                document.getElementById("timerSelect").value = index;
-            }
-
-            function toggleTimerZichtbaarheid() {
-                zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
-                updateWeergave();
-            }
-
-            function stelAangepasteTijdIn() {
-                const invoerSeconden = parseInt(document.getElementById("timeInput").value);
-                if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
-                    timers[geselecteerdeTimer] = invoerSeconden;
+        // Start de timer en synchroniseer met Firebase
+        function startTimer() {
+            if (intervals[geselecteerdeTimer]) return;
+            intervals[geselecteerdeTimer] = setInterval(() => {
+                if (timers[geselecteerdeTimer] > 0) {
+                    timers[geselecteerdeTimer]--;
                     updateWeergave();
-                    syncTimer();
+                    syncTimer(); // Synchroniseer elke seconde
                 } else {
-                    alert("Voer een geldig aantal seconden in (minimaal 0)");
+                    stopTimer(); // Stop de timer als deze op 0 komt
                 }
-            }
+            }, 1000);
 
-            // Initialiseer de eerste timer
-            selecteerTimer(0);
+            set(selectedTimerRef, geselecteerdeTimer);
+        }
+
+        // Stop de timer en synchroniseer met Firebase
+        function stopTimer() {
+            clearInterval(intervals[geselecteerdeTimer]);
+            intervals[geselecteerdeTimer] = null;
+            syncTimer();  // Synchroniseer de gestopte timer
+        }
+
+        // Reset de timer en synchroniseer met Firebase
+        function resetTimer() {
+            timers = [60, 60, 60, 60];
             updateWeergave();
-        });
-    </script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f5f5f5;
-        }
-        h1 {
-            font-size: 80px;
-        }
-        .timer-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 20px;
-            flex-wrap: nowrap;
-            overflow-x: auto;
-        }
-        .timer {
-            width: 230px;  /* Kleinere breedte voor mobiele weergave */
-            height: 230px;  /* Kleinere hoogte voor mobiele weergave */
-            border: 6px solid white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            font-size: 50px; /* Kleinere tekstgrootte voor mobiele weergave */
-            font-weight: bold;
-            color: red;
-            background-color: white;
-            border-radius: 20px;
-        }
-        .team-name {
-            font-size: 40px;
-            font-weight: bold;
-            color: black;
-            cursor: pointer;
-            margin-bottom: 20px;
-        }
-        .team-input {
-            font-size: 24px;
-            font-weight: bold;
-            width: 80%;
-            text-align: center;
-            border: none;
-            outline: none;
-        }
-        .controls {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 10px;
-            margin-top: 40px;
-        }
-        .row {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            flex-wrap: wrap;
-        }
-        button {
-            background-color: red;
-            color: white;
-            border: none;
-            padding: 10px;
-            font-size: 14px;
-            border-radius: 5px;
-            width: auto;
-            max-width: 120px;
-        }
-        .selected {
-            border: 6px solid red;
+            syncTimer();
         }
 
-        /* Media query voor kleinere schermen (mobiel) */
-        @media (max-width: 768px) {
-            .timer-container {
-                flex-direction: row; /* Zorg ervoor dat de timers naast elkaar blijven op kleinere schermen */
+        // Pas de tijd aan en synchroniseer met Firebase
+        function pasTijdAan(aantal) {
+            timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
+            updateWeergave();
+            syncTimer();
+        }
+
+        // Maak teamnaam bewerkbaar
+        function maakTeamnaamBewerkbaar(index) {
+            let teamNaamEl = document.getElementById(`team-name-${index}`);
+            let inputVeld = document.createElement("input");
+            inputVeld.type = "text";
+            inputVeld.value = teamNamen[index];
+            inputVeld.classList.add("team-input");
+
+            // Vervang de huidige naam door het invoerveld
+            teamNaamEl.replaceWith(inputVeld);
+            inputVeld.focus();
+
+            inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
+            inputVeld.addEventListener("keydown", (event) => {
+                if (event.key === "Enter") {
+                    slaNieuweTeamnaamOp(index, inputVeld.value);
+                }
+            });
+        }
+
+        // Sla de nieuwe teamnaam op in Firebase
+        function slaNieuweTeamnaamOp(index, nieuweNaam) {
+            if (nieuweNaam.trim() !== "") {
+                teamNamen[index] = nieuweNaam;
             }
-            .timer {
-                width: 230px;  /* Kleinere breedte voor mobiele weergave */
-                height: 230px;  /* Kleinere hoogte voor mobiele weergave */
-                font-size: 50px; /* Kleinere tekstgrootte voor mobiele weergave */
-            }
-            .team-name {
-                font-size: 18px; /* Kleinere teamnaam voor mobiele weergave */
-            }
-            .controls {
-                width: 90%;  /* Maak de knoppen smaller voor mobiele weergave */
-            }
-            button {
-                font-size: 12px; /* Kleinere tekst voor knoppen op mobiel */
+            updateWeergave();
+            syncTeamNames();
+        }
+
+        // Synchroniseren van veranderingen uit Firebase
+        function syncWithFirebase() {
+            onValue(timersRef, (snapshot) => {
+                const data = snapshot.val();
+                if (data) {
+                    timers = data;
+                    updateWeergave();
+                }
+            });
+
+            onValue(teamNamesRef, (snapshot) => {
+                const data = snapshot.val();
+                if (data) {
+                    teamNamen = data;
+                    updateWeergave();
+                }
+            });
+
+            onValue(selectedTimerRef, (snapshot) => {
+                const data = snapshot.val();
+                if (data !== undefined) {
+                    geselecteerdeTimer = data;
+                    updateWeergave();
+                }
+            });
+        }
+
+        // Event listeners voor de knoppen
+        document.querySelectorAll(".timer").forEach((el, index) => {
+            el.addEventListener("click", () => selecteerTimer(index));
+        });
+
+        document.getElementById("startBtn").addEventListener("click", startTimer);
+        document.getElementById("stopBtn").addEventListener("click", stopTimer);
+        document.getElementById("resetBtn").addEventListener("click", resetTimer);
+        document.getElementById("toggleBtn").addEventListener("click", toggleTimerZichtbaarheid);
+
+        document.querySelectorAll(".adjust-time").forEach(button => {
+            button.addEventListener("click", () => pasTijdAan(parseInt(button.dataset.amount)));
+        });
+
+        syncWithFirebase(); // Start de synchronisatie
+
+        // Selecteer een timer
+        function selecteerTimer(index) {
+            document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
+            geselecteerdeTimer = index;
+            document.getElementById(`timer-container-${index}`).classList.add("selected");
+            document.getElementById("timerSelect").value = index;
+            syncSelectedTimer();  // Synchroniseer de geselecteerde timer
+        }
+
+        function toggleTimerZichtbaarheid() {
+            zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
+            updateWeergave();
+        }
+
+        function stelAangepasteTijdIn() {
+            const invoerSeconden = parseInt(document.getElementById("timeInput").value);
+            if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
+                timers[geselecteerdeTimer] = invoerSeconden;
+                updateWeergave();
+                syncTimer();
+            } else {
+                alert("Voer een geldig aantal seconden in (minimaal 0)");
             }
         }
-    </style>
+
+        selecteerTimer(0);
+        updateWeergave();
+    </script>
 </head>
 <body>
     <h1>De Slimste Kameraad</h1>
