--- a/index.html
+++ b/index.html
@@ -4,139 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Slimste Kameraad</title>
-    <script defer src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
-
     <script defer>
         document.addEventListener("DOMContentLoaded", () => {
-            // Firebase Configuratie
-            const firebaseConfig = {
-                apiKey: "AIzaSyDZT3EHgtrDfDxevE4xy2a-xIS3X7Cegho",
-                authDomain: "de-slimste-kameraad-timer-ppt.firebaseapp.com",
-                databaseURL: "https://de-slimste-kameraad-timer-ppt-default-rtdb.europe-west1.firebasedatabase.app",
-                projectId: "de-slimste-kameraad-timer-ppt",
-                storageBucket: "de-slimste-kameraad-timer-ppt.firebasestorage.app",
-                messagingSenderId: "63484640762",
-                appId: "1:63484640762:web:6541546d615df83c5b7843"
-            };
-
-            // Initialiseer Firebase
-            const app = firebase.initializeApp(firebaseConfig);
-            const database = firebase.database();
-            const teamNamesRef = database.ref('teamNames');
-            const timersRef = database.ref('timers');
-            const selectedTimerRef = database.ref('selectedTimer');
-
             let timers = [60, 60, 60, 60];
             let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
             let intervals = [null, null, null, null];
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
 
-            // Synchroniseren van teamnamen via Firebase
             function updateWeergave() {
                 timers.forEach((tijd, index) => {
                     document.getElementById(`timer${index}`).textContent = tijd;
                     let teamNaamEl = document.getElementById(`team-name-${index}`);
-                    teamNaamEl.textContent = teamNamen[index];
+
+                    // Controleer of de teamnaam een invoerveld is en vervang het met een div na bewerking
+                    if (teamNaamEl.tagName.toLowerCase() === "input") {
+                        let nieuwNaamDiv = document.createElement("div");
+                        nieuwNaamDiv.id = `team-name-${index}`;
+                        nieuwNaamDiv.classList.add("team-name");
+                        nieuwNaamDiv.textContent = teamNamen[index];
+                        nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener opnieuw toe
+                        teamNaamEl.replaceWith(nieuwNaamDiv);
+                    } else {
+                        teamNaamEl.textContent = teamNamen[index];
+                        teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener toe als deze nog niet bestaat
+                    }
 
                     document.getElementById(`timer-container-${index}`).style.display = zichtbareTimers[index] ? "block" : "none";
                 });
-
-                // Zet de rand van de geselecteerde timer
-                document.querySelectorAll(".timer").forEach((el, index) => {
-                    if (index === geselecteerdeTimer) {
-                        el.classList.add("selected");
-                    } else {
-                        el.classList.remove("selected");
-                    }
-                });
             }
 
-            function syncWithFirebase() {
-                // Synchroniseer timers
-                timersRef.on('value', (snapshot) => {
-                    const data = snapshot.val();
-                    if (data) {
-                        timers = data;
-                        updateWeergave();
-                    }
-                });
-
-                // Synchroniseer teamnamen
-                teamNamesRef.on('value', (snapshot) => {
-                    const data = snapshot.val();
-                    if (data) {
-                        teamNamen = data;
-                        updateWeergave();
-                    }
-                });
-
-                // Synchroniseer de geselecteerde timer
-                selectedTimerRef.on('value', (snapshot) => {
-                    const data = snapshot.val();
-                    if (data !== undefined) {
-                        geselecteerdeTimer = data;
-                        updateWeergave();
-                    }
-                });
+            function selecteerTimer(index) {
+                document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
+                geselecteerdeTimer = index;
+                document.getElementById(`timer-container-${index}`).classList.add("selected");
+                document.getElementById("timerSelect").value = index;
             }
 
-            // Start de timer
             function startTimer() {
                 if (intervals[geselecteerdeTimer]) return;
                 intervals[geselecteerdeTimer] = setInterval(() => {
                     if (timers[geselecteerdeTimer] > 0) {
                         timers[geselecteerdeTimer]--;
                         updateWeergave();
-                        set(timersRef, timers);  // Synchroniseer met Firebase
-                    } else {
-                        stopTimer(); 
                     }
                 }, 1000);
-                set(selectedTimerRef, geselecteerdeTimer); // Synchroniseer de geselecteerde timer
             }
 
-            // Stop de timer
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
-                set(timersRef, timers);  // Synchroniseer gestopte timers
             }
 
-            // Reset de timer
             function resetTimer() {
                 timers = [60, 60, 60, 60];
                 updateWeergave();
-                set(timersRef, timers); // Synchroniseer reset
             }
 
-            // Pas de tijd aan
             function pasTijdAan(aantal) {
                 timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
                 updateWeergave();
-                set(timersRef, timers); // Synchroniseer tijd
             }
 
-            // Zet de zichtbaarheid van de timer aan of uit
             function toggleTimerZichtbaarheid() {
                 zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
                 updateWeergave();
             }
 
-            // Stel een aangepaste tijd in
             function stelAangepasteTijdIn() {
                 const invoerSeconden = parseInt(document.getElementById("timeInput").value);
                 if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
                     timers[geselecteerdeTimer] = invoerSeconden;
                     updateWeergave();
-                    set(timersRef, timers); // Synchroniseer tijd
                 } else {
                     alert("Voer een geldig aantal seconden in (minimaal 0)");
                 }
             }
 
-            // Maak teamnaam bewerkbaar
             function maakTeamnaamBewerkbaar(index) {
                 let naamLabel = document.getElementById(`team-name-${index}`);
                 let inputVeld = document.createElement("input");
@@ -144,10 +88,14 @@
                 inputVeld.value = teamNamen[index];
                 inputVeld.classList.add("team-input");
 
+                // Vervang de huidige naam door het invoerveld
                 naamLabel.replaceWith(inputVeld);
                 inputVeld.focus();
 
+                // Wanneer het invoerveld verliest focus, sla de nieuwe naam op
                 inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
+                
+                // Wanneer je op enter drukt, sla de nieuwe naam op
                 inputVeld.addEventListener("keydown", (event) => {
                     if (event.key === "Enter") {
                         slaNieuweTeamnaamOp(index, inputVeld.value);
@@ -155,25 +103,14 @@
                 });
             }
 
-            // Sla de nieuwe teamnaam op
             function slaNieuweTeamnaamOp(index, nieuweNaam) {
                 if (nieuweNaam.trim() !== "") {
                     teamNamen[index] = nieuweNaam;
-                    set(teamNamesRef, teamNamen); // Synchroniseer teamnamen met Firebase
                 }
                 updateWeergave();
             }
 
-            // Selecteer de timer
-            function selecteerTimer(index) {
-                document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
-                geselecteerdeTimer = index;
-                document.getElementById(`timer-container-${index}`).classList.add("selected");
-                document.getElementById("timerSelect").value = index;
-                set(selectedTimerRef, geselecteerdeTimer);  // Synchroniseer de geselecteerde timer
-            }
-
-            // Event listeners voor het selecteren van de timer
+            // Event listeners voor timer en knoppen
             document.querySelectorAll(".timer").forEach((el, index) => {
                 el.addEventListener("click", () => selecteerTimer(index));
             });
@@ -193,10 +130,9 @@
             });
 
             selecteerTimer(0);
-            syncWithFirebase(); // Start de synchronisatie
+            updateWeergave();
         });
     </script>
-
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -211,17 +147,18 @@
             justify-content: center;
             gap: 20px;
             margin-bottom: 20px;
-            flex-wrap: wrap;  /* Zorg ervoor dat de timers netjes schalen op verschillende schermgroottes */
+            flex-wrap: nowrap; /* Zorg ervoor dat de timers naast elkaar blijven */
+            overflow-x: auto; /* Zorg ervoor dat je kunt scrollen als er niet genoeg ruimte is */
         }
         .timer {
-            width: 230px;
-            height: 230px;
+            width: 230px;  /* Kleinere breedte voor mobiele weergave */
+            height: 230px;  /* Kleinere hoogte voor mobiele weergave */
             border: 6px solid white;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 70px;
+            font-size: 70px; /* Kleinere tekstgrootte voor mobiele weergave */
             font-weight: bold;
             color: red;
             background-color: white;
@@ -262,30 +199,31 @@
             padding: 10px;
             font-size: 14px;
             border-radius: 5px;
-            width: auto;
-            max-width: 120px;
+            width: auto; /* Laat de knoppen kleiner worden, maar passen goed in de layout */
+            max-width: 120px; /* Beperk de breedte van de knoppen */
         }
         .selected {
             border: 6px solid red;
         }
 
+        /* Media query voor kleinere schermen (mobiel) */
         @media (max-width: 768px) {
             .timer-container {
-                flex-direction: row;
+                flex-direction: row; /* Zorg ervoor dat de timers naast elkaar blijven op kleinere schermen */
             }
             .timer {
-                width: 230px;
-                height: 230px;
-                font-size: 50px;
+                width: 230px;  /* Kleinere breedte voor mobiele weergave */
+                height: 230px;  /* Kleinere hoogte voor mobiele weergave */
+                font-size: 50px; /* Kleinere tekstgrootte voor mobiele weergave */
             }
             .team-name {
-                font-size: 18px;
+                font-size: 18px; /* Kleinere teamnaam voor mobiele weergave */
             }
             .controls {
-                width: 90%;
+                width: 90%;  /* Maak de knoppen smaller voor mobiele weergave */
             }
             button {
-                font-size: 12px;
+                font-size: 12px; /* Kleinere tekst voor knoppen op mobiel */
             }
         }
     </style>
@@ -311,13 +249,12 @@
         </div>
     </div>
 
+    <!-- Control Buttons -->
     <div class="controls">
         <div class="row">
             <button id="startBtn">Start</button>
             <button id="stopBtn">Stop</button>
             <button id="resetBtn">Reset</button>
-        </div>
-        <div class="row">
             <button class="adjust-time" data-amount="10">+10 sec</button>
             <button class="adjust-time" data-amount="20">+20 sec</button>
             <button class="adjust-time" data-amount="30">+30 sec</button>
@@ -332,4 +269,10 @@
                 <option value="2">Timer 3</option>
                 <option value="3">Timer 4</option>
             </select>
-            <button id="
+            <button id="toggleBtn">Zichtbaar ja/nee</button>
+            <input type="number" id="timeInput" placeholder="Voer seconden in">
+            <button id="setTimeBtn">Doorvoeren</button>
+        </div>
+    </div>
+</body>
+</html>
